SERVER-12647 disallow empty field name in sort order